storage/xml/editor : - Editor::updateElement() fixed position - editor.less .tools fixed overflow - index.vml .container removed js:event - Element.remove() fixed bad call - History.sendSteps() fixed .steps - Insert.attach() select input, .addChild() fixed bad var + Schema.editor + Typed.toElement() events.click

--- a/storage/xml/editor/editor.less
+++ b/storage/xml/editor/editor.less
@@ -168,6 +168,7 @@
       padding: 0 0.25em;
       max-width: 0;
       transition: all @s;
+      overflow: hidden;
 
       span
       {
@@ -207,7 +208,7 @@
         &:hover
         {
           background: @gray4;
-          
+
           .value
           {
             color: @gray1;
